# CMPT886

./: README.md  index.md
ErrorBitStream-Anomaly/: index.md
anomaly/: index.md
file/: Linux Parallel Processing HOWTO_ SIMD Within A Register (e.g., using MMX).htm
project/: final_update.md  index.md  index2.md  swar explain.md  swar.md  up1.md  update1.md  update2_Model  update2_Model.md  update2_Typelegalization.md  update2_swar.md
project/LegalizerInfo_test/: CMakeLists.txt
project/LegalizerInfo_test/LegalizerInfo_test/: CMakeLists.txt  LegalizerInfo_test.cpp  TypeLegalization.cpp
project/LegalizerInfo_test/tests/: add25i5.ll  add25i5.s  add3i6.ll  add3i6.s  double_add.ll  i12.ll  i15.ll  i16.s  i6.ll  i6.s  i6_optiize.ll  i7.ll  i7.s  pr2-legalized.ll  pr2-legalized.s  pr2.s  split.ll  split2.ll  split3.ll  zext_test.ll
project/Swar/: CMakeLists.txt  Swar.cpp
project/Swar_TL/: CMakeLists.txt  Swar.cpp  Swar.h  Swar_TL.cpp  Type_Legalization.cpp  Type_Legalization.h
project/TL_SWAR_analysis/: LSH.cpp  LSH.hpp  LSHMinHash.cpp  LSHMinHash.hpp  MinHash.cpp  MinHash.hpp  Similarity.cpp  Similarity.hpp
project/TempCode/: LSH.java  LSHMinHash.java  MinHash.java  Similarity.java
